Fix shadow overlap issues with slider gallery edges

--- a/styles.css
+++ b/styles.css
@@ -76,14 +76,9 @@ button svg {
 
 .galleryItem {
 	float: left;
-	padding: 15px;
 	position: relative;
-	transition: all .25s ease;
+	
 }
-	.galleryItem:hover {
-		transform: scale(1.05);
-	}
-
 	.galleryItem .thumb {
 		border: solid 8px #fff;
 		box-shadow: 0 0 4px #999;
@@ -91,11 +86,13 @@ button svg {
 		display: block;
 		height: 225px;
 		overflow: hidden;
+		margin: calc(2.5% + 8px);
 		text-decoration: none;
-
+		transition: all .25s ease;
 	}
 		.galleryItem:hover .thumb {
 			box-shadow: 0 0 10px #444;
+			transform: scale(1.05);
 		}
 	
 	/* login */
@@ -198,7 +195,7 @@ button svg {
 	background: none;
 	border: none;
 	position: fixed;
-	right: 10px;
+	right: 25px;
 	top: 10px;
 	z-index: 30; /* above overlay */
 	}
@@ -219,27 +216,9 @@ button svg {
 }
 #sliderViewport {
 	overflow: hidden;
-	/* padding needs to be large enough that the scaled hover effect is not cut off but still
-	less than the padding between galleryItems to prevent box-shadow from previous and next items from appearing */
-	/* padding: 10px; */
 	position: relative;
 }
-	/* add transparent blocks to prevent hovering over previous and next items that are revealed by the above padding */
-	#sliderViewport::before,
-	#sliderViewport::after {
-		content: "";
-		display: block;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		width: 10px;
-	}
-	#sliderViewport::before {
-		left: 0;
-	}
-	#sliderViewport::after {
-		right: 0;
-	}
+	
 .js-sliderContent {
 	position: absolute;
 	}
